# lilith

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh  grub.cfg  linker.ld  rust-toolchain.toml
.cargo/: config.toml
bootloader/: Cargo.toml
bootloader/src/: lib.rs  multiboot_header.rs
driver/: Cargo.toml
driver/src/: async.rs  lib.rs
driver/src/dev/: mod.rs  ps2_keyboard.rs  vga.rs
etc/: filetypes.conf
kernel/: Cargo.toml
kernel/src/: gdt.rs  init.rs  interrupts.rs  lib.rs  memory.rs  syscall.rs
kernel/src/memory/: mod.rs  physical.rs  virtual.rs
kernel/src/proc/: mod.rs  state.rs
kernel/src/var/log/: mod.rs
kernel/src/vfs/: format_parser.rs  format_parser_test.rs  main.rs  mod.rs
libs/core/: Cargo.toml
lilith-kernel/: Cargo.toml  Makefile  build.sh
lilith-kernel/src/: error.rs  lib.rs
lilith-kernel/src/arch/riscv/: interrupt.rs  mod.rs
lilith-kernel/src/boot/: machine_mode.rs  memory_detect.rs  mod.rs  uart.rs
lilith-kernel/src/mm/: mod.rs
lilith-kernel/src/sched/: mod.rs
