[package]
name = "lilith-bootloader"
version = "0.1.0"
edition = "2021"

[features]
bios = ["bootloader/bios"]
uefi = ["bootloader/uefi"]

[dependencies]
bootloader = { version = "0.11.5", features = ["map_physical_memory"] } # 更新版本
multiboot2 = { version = "0.10", features = ["elf64"] }  # 新增多引导支持
x86_64 = "0.15.2"

[build-dependencies]
bootimage = "0.10.3"

[lib]
crate-type = ["cdylib"]