[package]
name = "lilith-driver"
version = "0.1.0"
edition = "2021"

[lib]
name = "lilith_driver"  # 显式声明库名称
path = "src/lib.rs"      # 指定入口文件路径
crate-type = ["cdylib"]

[dependencies]
x86_64 = { workspace = true }  # 使用统一版本
spin = { workspace = true }    # 版本对齐
uart_16550 = "0.2.18"          # 更新到稳定版本
pci = "0.6.0"                  # 升级PCI驱动
pic8259 = "0.10"
log = "0.4"

[features]
default = ["basic"]
basic = ["serial"]
serial = ["uart_16550"]
pci = ["pci"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 3