[package]
name = "lilith-kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
x86_64 = { version = "0.15.2", features = ["instructions", "abi_x86_interrupt"] }
spin = "0.10.0"
acpi = { version = "4.2.0", optional = true }

[features]
default = ["smp"]
smp = ["x86_64/smp"]  # 新增多核支持

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true